# subvt-backend

./: .dockerignore  .gitignore  .gitmodules  BUILD.md  Cargo.toml  Makefile  README.md  TODO.md  clippy.toml
subvt-app-service/: Cargo.toml
subvt-app-service/open-api-spec/: subvt_app_service.yml
subvt-app-service/src/: lib.rs  main.rs  metrics.rs
subvt-app-service/tests/: test.rs
subvt-block-indexer/: Cargo.toml
subvt-block-indexer/migrations/: 20211001104214_account.down.sql  20211001104214_account.up.sql  20211001104224_account_identity.down.sql  20211001104224_account_identity.up.sql  20211002050000_era.up.sql  20211002051000_epoch.down.sql  20211002051000_epoch.up.sql  20211002061816_block.up.sql  20211002062448_event.up.sql
subvt-block-indexer/src/: lib.rs  main.rs
subvt-block-processor/: Cargo.toml  README.md
subvt-block-processor/migrations/: 20211001104214_account.up.sql  20211001104224_account_identity.down.sql  20211002050000_era.down.sql  20211002061816_block.up.sql  20211002062448_event.down.sql  20211002062448_event.up.sql  20211006135055_era_validator.up.sql  20211008104852_event_im_online_heartbeat_received.down.sql  20211008104852_event_im_online_heartbeat_received.up.sql  20211008104852_event_validator_heartbeat_received.down.sql  20211008104852_event_validator_heartbeat_received.up.sql  20211009124557_event_validator_offline.up.sql  20211009131354_extrinsic_nominate.down.sql  20211009131354_extrinsic_nominate.up.sql  20211009140012_extrinsic_nominate_validator.up.sql
subvt-block-processor/src/: lib.rs  main.rs  metrics.rs
subvt-governance/: Cargo.toml
subvt-governance/src/: lib.rs  polkassembly.rs
subvt-governance/tests/: test.rs
subvt-inactive-validators-updater/: Cargo.toml
subvt-inactive-validators-updater/src/: lib.rs  main.rs
subvt-kline-updater/: Cargo.toml
subvt-kline-updater/src/: lib.rs  main.rs  metrics.rs
subvt-live-network-status-server/: Cargo.toml  README.md
subvt-live-network-status-server/src/: lib.rs  main.rs
subvt-metrics/: Cargo.toml
subvt-metrics/src/: lib.rs  registry.rs  server.rs
subvt-network-status-server/: Cargo.toml  README.md
subvt-network-status-server/src/: lib.rs  main.rs  metrics.rs
subvt-network-status-updater/: Cargo.toml
subvt-network-status-updater/src/: lib.rs  main.rs  metrics.rs
subvt-nft/: Cargo.toml
subvt-nft/src/: lib.rs
subvt-notification-generator/: Cargo.toml
subvt-notification-generator/src/: lib.rs  main.rs  metrics.rs
subvt-notification-processor/: Cargo.toml
subvt-notification-processor/src/: lib.rs  main.rs  metrics.rs
subvt-notification-sender/: Cargo.toml
subvt-notification-sender/src/: content.rs  lib.rs  main.rs
subvt-onekv-updater/: Cargo.toml
subvt-onekv-updater/src/: lib.rs  main.rs  metrics.rs
subvt-persistence/: .env.sample  Cargo.toml
subvt-persistence/migrations/: 20211001104214_account.up.sql  20211002050000_era.down.sql  20211002050000_era.up.sql  20211002061816_block.down.sql  20211002061816_block.up.sql  20211006135055_era_validator.down.sql  20211006135055_era_validator.up.sql  20211006135060_era_staker.down.sql  20211006135060_era_staker.up.sql  20211008104852_event_validator_heartbeat_received.up.sql  20211009124557_event_validator_offline.down.sql  20211009124557_event_validator_offline.up.sql  20211009131354_extrinsic_nominate.down.sql  20211009131354_extrinsic_nominate.up.sql  20211009140012_extrinsic_nominate_validator.down.sql  20211009140012_extrinsic_nominate_validator.up.sql  20211009172636_event_validator_chilled.down.sql  20211009172636_event_validator_chilled.up.sql  20211009173314_event_era_paid.down.sql  20211009173314_event_era_paid.up.sql  20211009175520_event_nominator_kicked.down.sql  20211009175520_event_nominator_kicked.up.sql  20211009180847_event_rewarded.down.sql  20211009180847_event_rewarded.up.sql  20211009183006_event_slashed.down.sql  20211009183006_event_slashed.up.sql  20211010104018_event_new_account.down.sql  20211010104018_event_new_account.up.sql  20211010104243_event_killed_account.down.sql  20211010104243_event_killed_account.up.sql  20211019103642_event_batch_item_completed.down.sql  20211019103642_event_batch_item_completed.up.sql  20211019103651_event_batch_interrupted.down.sql  20211019103651_event_batch_interrupted.up.sql  20211019103658_event_batch_completed.down.sql  20211019103658_event_batch_completed.up.sql  20211020110555_era_validator_preferences.down.sql  20211020110555_era_validator_preferences.up.sql  20211021145913_extrinsic_validate.down.sql  20211021145913_extrinsic_validate.up.sql  (+48 more)
subvt-persistence/src/: lib.rs  postgres.rs  redis.rs
subvt-plotter/: Cargo.toml
subvt-plotter/src/: lib.rs  rewards.rs
subvt-referendum-updater/: Cargo.toml
subvt-referendum-updater/src/: lib.rs  main.rs  metrics.rs
subvt-report-service/: Cargo.toml
subvt-report-service/open-api-spec/: subvt_report_service.yml
subvt-report-service/src/: lib.rs  main.rs  metrics.rs  util.rs
subvt-service-common/: Cargo.toml
subvt-service-common/src/: err.rs  lib.rs
subvt-session-validator-performance-updater/: Cargo.toml
subvt-session-validator-performance-updater/src/: lib.rs  main.rs  metrics.rs
subvt-substrate-client/: Cargo.toml
subvt-substrate-client/src/: argument.rs  event.rs  lib.rs  metadata.rs  storage.rs  storage_utility.rs
subvt-substrate-client/tests/: test.rs
subvt-telegram-bot/: Cargo.toml  DEV_REPORT.md  END_USER_TEST.md  README.md  RUN.md  TEST.md  test.sh
subvt-telegram-bot/src/: command.rs  lib.rs  main.rs  messenger.rs  metrics.rs  query.rs
subvt-telemetry-processor/: Cargo.toml
subvt-telemetry-processor/src/: lib.rs  main.rs  metrics.rs  types.rs
subvt-types/: Cargo.toml
subvt-types/src/: app.rs  crypto.rs  dn.rs  err.rs  kline.rs  lib.rs  onekv.rs  performance.rs  rdb.rs  report.rs  sub_id.rs  substrate.rs  subvt.rs  telegram.rs  telemetry.rs
subvt-validator-details-server/: Cargo.toml  README.md
subvt-validator-details-server/src/: lib.rs  main.rs  (+1 more)
subvt-validator-list-server/: Cargo.toml  README.md
subvt-validator-list-updater/: Cargo.toml
(+1100 files in other folders)
