[workspace]
members = [
    "subvt-app-service",
    "subvt-block-processor",
    "subvt-config",
    "subvt-live-network-status-server",
    "subvt-live-network-status-updater",
    "subvt-logging",
    "subvt-notification-generator",
    "subvt-notification-sender",
    "subvt-onekv-updater",
    "subvt-persistence",
    "subvt-proc-macro",
    "subvt-report-service",
    "subvt-service-common",
    "subvt-substrate-client",
    "subvt-telemetry-processor",
    "subvt-types",
    "subvt-utility",
    "subvt-validator-details-server",
    "subvt-validator-list-server",
    "subvt-validator-list-updater",
]
