[workspace]
members = [
    "subvt-app-service",
    "subvt-block-processor",
    "subvt-config",
    "subvt-governance",
    "subvt-network-status-server",
    "subvt-network-status-updater",
    "subvt-logging",
    "subvt-metrics",
    "subvt-nft",
    "subvt-notification-generator",
    "subvt-notification-processor",
    "subvt-onekv-updater",
    "subvt-persistence",
    "subvt-plotter",
    "subvt-proc-macro",
    "subvt-referendum-updater",
    "subvt-report-service",
    "subvt-service-common",
    "subvt-substrate-client",
    "subvt-telegram-bot",
    "subvt-telemetry-processor",
    "subvt-types",
    "subvt-utility",
    "subvt-validator-details-server",
    "subvt-validator-list-server",
    "subvt-validator-list-updater",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
itertools = "0.12.0"
lazy_static = "1.4"
log = "0.4"
thiserror = "1.0"