[workspace]
members = [
    "subvt-app-service",
    "subvt-block-processor",
    "subvt-config",
    "subvt-governance",
    "subvt-kline-updater",
    "subvt-logging",
    "subvt-metrics",
    "subvt-network-status-server",
    "subvt-network-status-updater",
    "subvt-nft",
    "subvt-notification-generator",
    "subvt-notification-processor",
    "subvt-onekv-updater",
    "subvt-persistence",
    "subvt-plotter",
    "subvt-proc-macro",
    "subvt-referendum-updater",
    "subvt-report-service",
    "subvt-service-common",
    "subvt-session-validator-performance-updater",
    "subvt-substrate-client",
    "subvt-telegram-bot",
    "subvt-telemetry-processor",
    "subvt-types",
    "subvt-utility",
    "subvt-validator-details-server",
    "subvt-validator-list-server",
    "subvt-validator-list-updater",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
itertools = "0.14"
lazy_static = "1.4"
log = "0.4"
num-traits = "0.2"
thiserror = "2.0"