[package]
name = "subvt-app-service"
version = "0.17.33"
edition = "2021"
rust-version = "1.67.0"

[dependencies]
actix-http = "3.5"
actix-service = "2.0"
actix-web = "4.4"
anyhow = { workspace = true }
async-trait = "0.1"
futures = "0.3"
hex = "0.4"
libsecp256k1 = "0.7"
lazy_static = { workspace = true }
log = { workspace = true }
once_cell = "1"
rustc-hash = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
subvt-config = { path = "../subvt-config" }
subvt-logging = { path = "../subvt-logging" }
subvt-metrics = { path = "../subvt-metrics" }
subvt-persistence = { path = "../subvt-persistence" }
subvt-service-common = { path = "../subvt-service-common" }
subvt-types = { path = "../subvt-types" }
tokio = { version = "1.35", features = ["full"] }

[dev-dependencies]
actix-rt = "2.9"