[package]
name = "subvt-block-indexer"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.44"
async-trait = "0.1.51"
chrono = { version = "0.4.19", default-features = true, features = ["serde"] }
lazy_static = "1.4.0"
log = "0.4.14"
sqlx = { version = "0.5.7", features = ["postgres", "runtime-tokio-rustls", "chrono"] }
subvt-config = { path = "../subvt-config" }
subvt-logging = { path = "../subvt-logging" }
subvt-service-common = { path = "../subvt-service-common" }
tokio = { version = "1.11.0", features = ["full"] }