[package]
name = "subvt-block-processor"
version = "0.21.2"
edition = "2021"
rust-version = "1.67.0"

[dependencies]
anyhow = { workspace = true }
async-lock = "3.4"
async-recursion = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", default-features = true, features = ["serde"] }
hex = "0.4"
lazy_static = { workspace = true }
log = { workspace = true }
once_cell = "1"
parity-scale-codec = "3.6"
rustc-hash = "2.0"
serde_json = "1.0"
subvt-config = { path = "../subvt-config" }
subvt-logging = { path = "../subvt-logging" }
subvt-metrics = { path = "../subvt-metrics" }
subvt-persistence = { path = "../subvt-persistence" }
subvt-service-common = { path = "../subvt-service-common" }
subvt-substrate-client = { path = "../subvt-substrate-client" }
subvt-types = { path = "../subvt-types" }
tokio = { version = "1.41", features = ["full"] }