[package]
name = "subvt-block-processor"
version = "0.24.3"
edition = "2021"
rust-version = "1.67.0"

[dependencies]
anyhow = { workspace = true }
async-lock = "3.4"
async-recursion = "1.1"
async-trait = "0.1"
lazy_static = { workspace = true }
log = { workspace = true }
once_cell = "1"
rustc-hash = "2.1"
serde_json = "1.0"
subvt-config = { path = "../subvt-config" }
subvt-metrics = { path = "../subvt-metrics" }
subvt-persistence = { path = "../subvt-persistence" }
subvt-service-common = { path = "../subvt-service-common" }
subvt-substrate-client = { path = "../subvt-substrate-client" }
subvt-types = { path = "../subvt-types" }
tokio = { version = "1.47", features = ["full"] }