[package]
name = "subvt-governance"
version = "0.17.39"
edition = "2021"
rust-version = "1.67.0"

[dependencies]
anyhow = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
reqwest = { version = "0.12", features = ["blocking", "json", "gzip", "brotli"] }
serde_json = "1.0"
subvt-config = { path = "../subvt-config" }
subvt-types = { path = "../subvt-types" }
tokio = { version = "1.35", features = ["full"] }