[package]
name = "subvt-governance"
version = "0.24.17"
edition = "2021"
rust-version = "1.67.0"

[dependencies]
anyhow = { workspace = true }
lazy_static = { workspace = true }
reqwest = { version = "0.12", features = ["blocking", "json", "gzip", "brotli"] }
subvt-config = { path = "../subvt-config" }
subvt-types = { path = "../subvt-types" }
tokio = { version = "1.48", features = ["full"] }