[package]
name = "subvt-inactive-validators-updater"
version = "0.1.0"
edition = "2021"
rust-version = "1.56.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
async-lock = "2.4.0"
async-trait = "0.1.51"
chrono = "0.4.19"
hex = "0.4"
lazy_static = "1.4.0"
log = "0.4.14"
redis = "0.21.2"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.66"
subvt-config = { path = "../subvt-config" }
subvt-logging = { path = "../subvt-logging" }
subvt-persistence = { path = "../subvt-persistence" }
subvt-service-common = { path = "../subvt-service-common" }
subvt-substrate-client = { path = "../subvt-substrate-client" }
subvt-types = { path = "../subvt-types" }
tokio = { version = "1.11.0", features = ["full"] }
