[package]
name = "subvt-kline-updater"
version = "0.22.2"
edition = "2021"
rust-version = "1.67.0"

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1"
chrono = "0.4"
lazy_static = { workspace = true }
log = { workspace = true }
once_cell = "1"
reqwest = { version = "0.12", features = ["blocking", "json", "gzip", "brotli"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
subvt-config = { path = "../subvt-config" }
subvt-logging = { path = "../subvt-logging" }
subvt-metrics = { path = "../subvt-metrics" }
subvt-persistence = { path = "../subvt-persistence" }
subvt-service-common = { path = "../subvt-service-common" }
subvt-types = { path = "../subvt-types" }
tokio = { version = "1.41", features = ["full"] }
zip-extract = "0.2.1"
