[package]
name = "subvt-live-network-status-server"
version = "0.1.0"
edition = "2021"
rust-version = "1.56.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
async-trait = "0.1.51"
bus = "2.2.3"
chrono = "0.4.19"
config = "0.11.0"
env_logger = "0.9.0"
jsonrpsee = { version = "0.6.1", features = ["full"] }
jsonrpsee-types = "0.6.1"
lazy_static = "1.4.0"
log = "0.4.14"
redis = { version = "0.21.2", features = ["tokio-comp"] }
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
subvt-config = { path = "../subvt-config" }
subvt-service-common = { path = "../subvt-service-common" }
subvt-types = { path = "../subvt-types" }
subvt-logging = { path = "../subvt-logging" }
tokio = { version = "1.15.0", features = ["full"] }
