[package]
name = "subvt-metrics"
version = "0.24.12"
edition = "2021"
rust-version = "1.67.0"

[dependencies]
log = { workspace = true }
once_cell = "1"
prometheus = "0.14"
thiserror = { workspace = true }
tokio = { version = "1.47", features = ["time", "rt-multi-thread"] }
warp = { version = "0.3", default-features = false }