[package]
name = "subvt-network-status-server"
version = "0.7.3"
edition = "2021"
rust-version = "1.60.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1.56"
bus = "2.2.4"
chrono = "0.4.19"
env_logger = "0.9.0"
futures-util = "0.3.21"
jsonrpsee = { version = "0.14.0", features = ["full"] }
lazy_static = "1.4.0"
log = "0.4.16"
once_cell = "1.13"
redis = { version = "0.21.5", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.82"
subvt-config = { path = "../subvt-config" }
subvt-metrics = { path = "../subvt-metrics" }
subvt-service-common = { path = "../subvt-service-common" }
subvt-types = { path = "../subvt-types" }
subvt-logging = { path = "../subvt-logging" }
tokio = { version = "1.19.2",features = ["full"] }
