[package]
name = "subvt-network-status-server"
version = "0.14.19"
edition = "2021"
rust-version = "1.65.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1"
bus = "2.2.4"
chrono = "0.4"
env_logger = "0.10.0"
futures-util = "0.3.21"
jsonrpsee = { version = "0.16.0", features = ["full"] }
lazy_static = { workspace = true }
log = { workspace = true }
once_cell = "1.13"
redis = { version = "0.22.2", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
subvt-config = { path = "../subvt-config" }
subvt-metrics = { path = "../subvt-metrics" }
subvt-service-common = { path = "../subvt-service-common" }
subvt-types = { path = "../subvt-types" }
subvt-logging = { path = "../subvt-logging" }
tokio = { version = "1.20", features = ["full"] }
