[package]
name = "subvt-network-status-updater"
version = "0.14.8"
edition = "2021"
rust-version = "1.65.0"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = "0.4"
lazy_static = "1.4.0"
log = "0.4.16"
once_cell = "1.13"
redis = { version = "0.22.1", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
subvt-config = { path = "../subvt-config" }
subvt-logging = { path = "../subvt-logging" }
subvt-metrics = { path = "../subvt-metrics" }
subvt-service-common = { path = "../subvt-service-common" }
subvt-substrate-client = { path = "../subvt-substrate-client" }
subvt-types = { path = "../subvt-types" }
tokio = { version = "1.20", features = ["full"] }
