[package]
name = "subvt-nft"
version = "0.17.31"
edition = "2021"
rust-version = "1.67.0"

[dependencies]
anyhow = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
reqwest = { version = "0.12", features = ["blocking", "json", "gzip", "brotli"] }
subvt-config = { path = "../subvt-config" }
subvt-types = { path = "../subvt-types" }