[package]
name = "subvt-notification-generator"
version = "0.17.28"
edition = "2021"
rust-version = "1.67.0"

[dependencies]
anyhow = { workspace = true }
async-lock = "3.3"
async-trait = "0.1"
chrono = "0.4"
futures = "0.3"
futures-util = "0.3"
lazy_static = { workspace = true }
log = { workspace = true }
once_cell = "1"
redis = "0.25"
rustc-hash = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
subvt-config = { path = "../subvt-config" }
subvt-service-common = { path = "../subvt-service-common" }
subvt-types = { path = "../subvt-types" }
subvt-logging = { path = "../subvt-logging" }
subvt-metrics = { path = "../subvt-metrics" }
subvt-persistence = { path = "../subvt-persistence" }
subvt-substrate-client = { path = "../subvt-substrate-client" }
tokio = { version = "1.35", features = ["full"] }