[package]
name = "subvt-notification-generator"
version = "0.24.14"
edition = "2021"
rust-version = "1.67.0"

[dependencies]
anyhow = { workspace = true }
async-lock = "3.4"
async-trait = "0.1"
chrono = "0.4"
futures-util = "0.3"
lazy_static = { workspace = true }
log = { workspace = true }
once_cell = "1"
redis = "0.32"
rustc-hash = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
subvt-config = { path = "../subvt-config" }
subvt-service-common = { path = "../subvt-service-common" }
subvt-types = { path = "../subvt-types" }
subvt-metrics = { path = "../subvt-metrics" }
subvt-persistence = { path = "../subvt-persistence" }
subvt-substrate-client = { path = "../subvt-substrate-client" }
tokio = { version = "1.47", features = ["full"] }