[package]
name = "subvt-notification-processor"
version = "0.17.12"
edition = "2021"
rust-version = "1.67.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
a2 = "0.8"
anyhow = { workspace = true }
async-trait = "0.1"
chrono = "0.4"
fcm = "0.9.1"
futures = "0.3"
futures-util = "0.3"
itertools = { workspace = true }
job_scheduler = "1.2.1"
lazy_static = { workspace = true }
lettre = { version = "0.11.2", default-features = true, features = ["tokio1-native-tls"]}
lettre_email = "0.9.4"
log = { workspace = true }
once_cell = "1"
redis = { version = "0.24", features = ["tokio-comp"] }
rustc-hash = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
subvt-config = { path = "../subvt-config" }
subvt-logging = { path = "../subvt-logging" }
subvt-metrics = { path = "../subvt-metrics" }
subvt-persistence = { path = "../subvt-persistence" }
subvt-service-common = { path = "../subvt-service-common" }
subvt-telegram-bot = { path = "../subvt-telegram-bot" }
subvt-types = { path = "../subvt-types" }
subvt-utility = { path = "../subvt-utility" }
tera = "1.16.0"
thiserror = { workspace = true }
tokio = { version = "1.34", features = ["full"] }