[package]
name = "subvt-notification-processor"
version = "0.24.2"
edition = "2021"
rust-version = "1.67.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
a2 = "0.10"
anyhow = { workspace = true }
async-trait = "0.1"
chrono = "0.4"
fcm = "0.9"
futures-util = "0.3"
itertools = { workspace = true }
job_scheduler = "1.2"
lazy_static = { workspace = true }
lettre = { version = "0.11", default-features = true, features = ["tokio1-native-tls"]}
log = { workspace = true }
once_cell = "1"
redis = { version = "0.32", features = ["tokio-comp"] }
rustc-hash = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
subvt-config = { path = "../subvt-config" }
subvt-metrics = { path = "../subvt-metrics" }
subvt-persistence = { path = "../subvt-persistence" }
subvt-service-common = { path = "../subvt-service-common" }
subvt-telegram-bot = { path = "../subvt-telegram-bot" }
subvt-types = { path = "../subvt-types" }
subvt-utility = { path = "../subvt-utility" }
tera = "1.20"
thiserror = { workspace = true }
tokio = { version = "1.47", features = ["full"] }