[package]
name = "subvt-notification-sender"
version = "0.1.2"
edition = "2021"
rust-version = "1.56.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
a2 = "0.6.2"
anyhow = "1.0.53"
async-trait = "0.1.52"
chrono = "0.4.19"
config = "0.11.0"
fcm = "0.9.1"
futures = "0.3.21"
job_scheduler = "1.2.1"
lazy_static = "1.4.0"
lettre = { version = "0.10.0-rc.4", default-features = true, features = ["tokio1-native-tls"]}
lettre_email = "0.9.4"
log = "0.4.14"
redis = "0.21.5"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
subvt-config = { path = "../subvt-config" }
subvt-persistence = { path = "../subvt-persistence" }
subvt-service-common = { path = "../subvt-service-common" }
subvt-types = { path = "../subvt-types" }
subvt-logging = { path = "../subvt-logging" }
tera = "1.15.0"
tokio = { version = "1.16.1", features = ["full"] }