[package]
name = "subvt-onekv-updater"
version = "0.8.2"
edition = "2021"
rust-version = "1.60.0"

[dependencies]
anyhow = "1.0"
async-trait = "0.1.57"
chrono = { version = "0.4.19", default-features = true, features = ["serde"] }
lazy_static = "1.4.0"
log = "0.4.16"
once_cell = "1.13"
prometheus = { version = "0.13.1", features = ["process"] }
reqwest = { version = "0.11.11", features = ["blocking", "json", "gzip", "brotli"] }
subvt-config = { path = "../subvt-config" }
subvt-metrics = { path = "../subvt-metrics" }
subvt-persistence = { path = "../subvt-persistence" }
subvt-service-common = { path = "../subvt-service-common" }
subvt-types = { path = "../subvt-types" }
subvt-logging = { path = "../subvt-logging" }
tokio = { version = "1.20", features = ["full"] }