[package]
name = "subvt-onekv-updater"
version = "0.14.13"
edition = "2021"
rust-version = "1.65.0"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", default-features = true, features = ["serde"] }
lazy_static = "1.4.0"
log = "0.4.16"
once_cell = "1.13"
prometheus = { version = "0.13.2", features = ["process"] }
rand = "0.8.5"
reqwest = { version = "0.11.11", features = ["blocking", "json", "gzip", "brotli"] }
subvt-config = { path = "../subvt-config" }
subvt-metrics = { path = "../subvt-metrics" }
subvt-persistence = { path = "../subvt-persistence" }
subvt-service-common = { path = "../subvt-service-common" }
subvt-types = { path = "../subvt-types" }
subvt-logging = { path = "../subvt-logging" }
tokio = { version = "1.20", features = ["full"] }