[package]
name = "subvt-persistence"
version = "0.12.2"
edition = "2021"
rust-version = "1.60.0"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
hex = "0.4"
lazy_static = "1.4.0"
log = "0.4.16"
parity-scale-codec = "3.1.5"
redis = { version = "0.21.5", features = ["tokio-comp"] }
rustc-hash = "1.1.0"
serde = { version = "1.0" }
serde_json = "1.0"
subvt-config = { path = "../subvt-config" }
subvt-types = { path = "../subvt-types" }
sqlx = { git  = "https://github.com/helikon-labs/sqlx.git", branch = "helikon-increased-field-count", features = ["postgres", "runtime-tokio-rustls", "chrono"] }