[package]
name = "subvt-persistence"
version = "0.22.4"
edition = "2021"
rust-version = "1.67.0"

[dependencies]
anyhow = { workspace = true }
chrono = "0.4"
lazy_static = { workspace = true }
log = { workspace = true }
redis = { version = "0.27", features = ["tokio-comp"] }
rustc-hash = "2.1"
serde = { version = "1.0" }
serde_json = "1.0"
subvt-config = { path = "../subvt-config" }
subvt-types = { path = "../subvt-types" }
sqlx = { git  = "https://github.com/helikon-labs/sqlx.git", branch = "helikon-increased-field-count", features = ["postgres", "runtime-tokio-rustls", "chrono", "bigdecimal"] }