[package]
name = "subvt-plotter"
version = "0.24.13"
edition = "2021"
rust-version = "1.67.0"

[dependencies]
anyhow = { workspace = true }
chrono = "0.4"
format_num = "0.1.0"
itertools = { workspace = true }
lazy_static = { workspace = true }
thiserror = { workspace = true }
rand = "0.9"
resvg = "0.45"
rustc-hash = "2.1"
subvt-config = { path = "../subvt-config" }
subvt-types = { path = "../subvt-types" }
subvt-utility = { path = "../subvt-utility" }
svg = "0.18"
tiny-skia = "0.11"
usvg = "0.45"