[package]
name = "subvt-referendum-updater"
version = "0.22.8"
edition = "2021"
rust-version = "1.67.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1"
chrono = { version = "0.4", default-features = true, features = ["serde"] }
enum-iterator = "2.0"
lazy_static = { workspace = true }
log = { workspace = true }
once_cell = "1"
subvt-config = { path = "../subvt-config" }
subvt-governance = { path = "../subvt-governance" }
subvt-metrics = { path = "../subvt-metrics" }
subvt-persistence = { path = "../subvt-persistence" }
subvt-service-common = { path = "../subvt-service-common" }
subvt-types = { path = "../subvt-types" }
tokio = { version = "1.41", features = ["full"] }
