[package]
name = "subvt-report-service"
version = "0.17.36"
edition = "2021"
rust-version = "1.67.0"

[dependencies]
actix-web = "4.4"
anyhow = { workspace = true }
async-trait = "0.1"
futures-util = "0.3"
hex = "0.4"
lazy_static = { workspace = true }
log = { workspace = true }
once_cell = "1"
redis = { version = "0.25", features = ["tokio-comp"] }
rustc-hash = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
subvt-config = { path = "../subvt-config" }
subvt-metrics = { path = "../subvt-metrics" }
subvt-persistence = { path = "../subvt-persistence" }
subvt-service-common = { path = "../subvt-service-common" }
subvt-substrate-client = { path = "../subvt-substrate-client" }
subvt-types = { path = "../subvt-types" }
subvt-logging = { path = "../subvt-logging" }
tokio = { version = "1.35", features = ["full"] }