[package]
name = "subvt-report-service"
version = "0.22.4"
edition = "2021"
rust-version = "1.67.0"

[dependencies]
actix-web = "4.9"
anyhow = { workspace = true }
async-trait = "0.1"
chrono = "0.4"
futures-util = "0.3"
hex = "0.4"
lazy_static = { workspace = true }
log = { workspace = true }
once_cell = "1"
redis = { version = "0.28", features = ["tokio-comp"] }
rustc-hash = "2.0"
serde = { version = "1.0", features = ["derive"] }
subvt-config = { path = "../subvt-config" }
subvt-metrics = { path = "../subvt-metrics" }
subvt-persistence = { path = "../subvt-persistence" }
subvt-service-common = { path = "../subvt-service-common" }
subvt-substrate-client = { path = "../subvt-substrate-client" }
subvt-types = { path = "../subvt-types" }
tokio = { version = "1.41", features = ["full"] }