[package]
name = "subvt-service-common"
version = "0.16.4"
edition = "2021"
rust-version = "1.67.0"

[dependencies]
actix-web = "4.3"
anyhow = { workspace = true }
async-trait = "0.1"
log = { workspace = true }
serde_json = "1.0"
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
subvt-config = { path = "../subvt-config" }
subvt-logging = { path = "../subvt-logging" }
subvt-metrics = { path = "../subvt-metrics" }
subvt-types = { path = "../subvt-types" }
tokio = { version = "1.26", features = ["full"] }